# sim-plugin-dymola

./: .gitignore  LICENSE-NOTICE.md  README.md  pyproject.toml
src/sim_plugin_dymola/: __init__.py  compatibility.yaml  driver.py
src/sim_plugin_dymola/_skills/dymola/: SKILL.md
tests/: test_dymola_driver.py  test_protocol.py  test_wheel_contents.py
